# claude-hud

./: .gitignore  .swiftformat  AGENT_CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DONE.md  LICENSE  META_ANALYSIS_PRE_ALPHA_AUDIT_SYNTHESIS.md  Makefile  README.md  TODO.md  package.json  plan-clever-brewing-graham.md  pnpm-lock.yaml
.claude/: KNOWLEDGE.md  gap-matrix-explorer-vs-system.md  ralph-loop.local.md  settings.json  shaping-onboarding.md  shaping.md  slices-onboarding.md  slices-public-alpha.md  spike-project-detection.md
.claude/archive/: state-detection-review-prompt.md  state-resolver-completion-report.md
.claude/commands/: restart.md
.claude/compiled/: daemon.md  debugging.md  hooks.md  migration.md  rules.md  side-effects.md  terminal.md  ui-state.md  workflows.md
.claude/docs/: adding-new-cli-agent-guide.md  agent-observability-runbook.md  agent-sdk-migration-guide.md  architecture-deep-dive.md  architecture-overview.md  debugging-guide.md  development-workflows.md  feature-idea-to-v1-launcher.md  gotchas.md  hook-operations.md  idea-capture-specs.md  multi-platform-architecture.md  release-guide.md  side-effects-map.md  status-sync-architecture.md  terminal-activation-review-synthesis.md  terminal-activation-test-matrix.md  terminal-switching-matrix.md  terminal-test-matrix.md  ui-refresh-contract.md
.claude/handoffs/: capacitor-20260127-214652.md
.claude/hooks/: start-dev.sh
.claude/plans/: 2026-01-18-idea-capture-redesign.md  ACTIVE-activity-based-project-tracking.md  ACTIVE-alpha-release-checklist.md  ACTIVE-capacitor-global-storage.md  ACTIVE-heartbeat-health-monitoring.md  ACTIVE-idea-capture-redesign.md  ACTIVE-multi-agent-cli-support.md  ACTIVE-shell-integration-engineering.md  ACTIVE-shell-integration-prd.md  ACTIVE-state-detection-simplification.md  ACTIVE-task3-ux-architecture-design.md  ACTIVE-terminal-activation-fixes.md  ACTIVE-transparent-ui-ia-synthesis.md  ACTIVE-workstreams-lifecycle.md  DONE-session-based-locking.md  DONE-side-effects-analysis.md  DONE-terminal-activation-fixes.md  DONE-workstreams-lifecycle.md  DRAFT-claude-code-mcp-idea-orchestration.md  DRAFT-ui-tuning-panel-rework.md  README.md  REFERENCE-alpha-release-checklist.md  REFERENCE-app-renaming-checklist.md  REFERENCE-hud-vision-jan-2026.md  REFERENCE-idea-capture-bootstrap-prompt.md  REFERENCE-transparent-ui-ia-synthesis.md  activity-based-project-tracking.md  app-renaming-checklist.md  dry-hook-events-skip-through.md  idea-capture-bootstrap-prompt.md  plan-gleaming-baking-wozniak.md
.github/workflows/: ci.yml  hem-shadow-nightly.yml
ClaudeHUD/: Package.swift
apps/daemon/: README.md  package-lock.json  package.json  tsconfig.json
apps/relay/: ARCHITECTURE.md
apps/sdk-bridge/: package-lock.json  package.json  vitest.config.ts
apps/swift/: Package.resolved  Package.swift  build-app.sh  plan-imperative-soaring-moonbeam.md
apps/tauri/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
apps/tauri/src-tauri/: CLAUDE.md  CLAUDE_ROOT.md  CODEBASE_ANALYSIS.md  Cargo.toml  DOCUMENTATION_SUMMARY.md  Info.plist  ROOT_CLAUDE_GUIDE.md  tauri.conf.json
apps/tauri/src-tauri/.claude/: hud-status.json
apps/tauri/src-tauri/src/: lib.rs
artifacts/: hem-shadow-bench-report.json
assets/: AppIcon.icns  README.md
assets/capacitor.icon/: icon.json
core/daemon/: Cargo.toml
core/daemon-protocol/: Cargo.toml
core/daemon-protocol/src/: lib.rs
core/daemon/config/: hem-v2.example.toml
core/daemon/src/: activity.rs  backoff.rs  boundaries.rs  db.rs  hem.rs  main.rs  process.rs  project_identity.rs  project_state_policy.rs  protocol.rs  reducer.rs  replay.rs  session_store.rs  state.rs
core/daemon/src/are/: metrics.rs  mod.rs  registry.rs  resolver.rs  state.rs  tmux_poller.rs
core/daemon/tests/: hem_shadow_bench.rs  ipc_hardening.rs  ipc_smoke.rs
core/hud-core/: Cargo.toml  uniffi-bindgen.rs
core/hud-core/src/: activation.rs  activity.rs  artifacts.rs  boundaries.rs  config.rs  engine.rs  error.rs  ideas.rs  lib.rs  patterns.rs  projects.rs  sessions.rs  setup.rs  stats.rs  storage.rs  types.rs  validation.rs
core/hud-core/src/activation/: policy.md  policy.rs  trace.rs
core/hud-core/src/agents/: claude.rs  mod.rs  registry.rs  stubs.rs  types.rs
core/hud-core/src/state/: README.md  cleanup.rs  daemon.rs  integration_tests.rs  lock.rs  mod.rs  path_utils.rs  resolver.rs  store.rs  transition.rs  types.rs
core/hud-core/tests/: agent_fixtures.rs  registry_integration.rs
core/hud-core/tests/fixtures/agents/claude/corrupted/: sessions.json
core/hud-core/tests/fixtures/agents/claude/empty/: sessions.json
core/hud-core/tests/fixtures/agents/claude/v2-multiple-sessions/: sessions.json
core/hud-core/tests/fixtures/agents/claude/v2-working/: sessions.json
core/hud-hook/: Cargo.toml
core/hud-hook/src/: cwd.rs  daemon_client.rs  handle.rs  lock_holder.rs  main.rs
crates/hud-core/: Cargo.toml
crates/hud-core/src/: artifacts.rs  engine.rs  error.rs  lib.rs  patterns.rs  projects.rs  sessions.rs  stats.rs  types.rs
docs/: NOTARIZATION_SETUP.md  PRE_RELEASE_CHECKLIST.md  TERMINAL_ACTIVATION_MANUAL_TESTING.md  TERMINAL_ACTIVATION_UX_SPEC.md  alpha-feedback-telemetry-loop.md  ambient-routing-engine-runbook.md  channel-profile-workflow.md  claude-code-artifacts.md  daemon-ipc.md  feedback-form-v2.md  hud-daemon-design.md  state-detection-design.md  tauri-capabilities.md  tauri-macos-native-guide.md
docs/agent-sdk/: custom-tools.md  hooks.md  mcp.md  migration-guide.md  modifying-system-prompts.md  overview.md  permissions.md  plugins.md  python.md  quickstart.md  (+7 more)
scripts/: bootstrap.sh  build-test.sh  fetch-agent-sdk-docs.ts  fetch-cc-docs.ts  hud-state-tracker.sh  reset-for-testing.sh  restart-app.sh  run-tests.sh  run-transparent-ui.sh  setup-git-hooks.sh  sync-hooks.sh  test-hook-events.sh  test-hud-hooks.sh  transparent-ui-server.mjs
src/: App.tsx  index.css
src-tauri/: CLAUDE.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
swift-bindings/: hud_coreFFI.h
(+412 files in other folders)
