[workspace]
members = [
    "crates/hud-core",
    "src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
license = "MIT"
authors = ["you"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11"
walkdir = "2.5"
dirs = "6.0"
once_cell = "1.19"
chrono = "0.4"
thiserror = "2.0"
