[workspace]
members = [
    "core/daemon",
    "core/daemon-protocol",
    "core/hud-core",
    "core/hud-hook",
]
resolver = "2"

[workspace.package]
version = "0.1.27"
edition = "2021"
rust-version = "1.77.2"
license = "MIT"
authors = ["you"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11"
walkdir = "2.5"
dirs = "6.0"
once_cell = "1.19"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
fs-err = "3.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
tracing-appender = "0.2"
