[package]
name = "claude-hud"
version = "0.1.0"
description = "Claude HUD - Dashboard for Claude Code"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
dirs = "6.0"
walkdir = "2.5"
regex = "1.11"
notify = "6.1"
chrono = "0.4"
once_cell = "1.19"
