[package]
name = "capacitor-daemon"
description = "Local daemon for Capacitor state tracking (single-writer service)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "capacitor-daemon"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
fs-err.workspace = true
capacitor-daemon-protocol = { path = "../daemon-protocol" }
rusqlite = "0.31"
sysinfo = "0.30"

[dev-dependencies]
tempfile = "3.14"
