[package]
name = "hud-core"
description = "Core library for Capacitor - shared business logic for all clients"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "hud_core"

[dependencies]
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
walkdir.workspace = true
dirs.workspace = true
once_cell.workspace = true
chrono.workspace = true
thiserror.workspace = true
fs-err.workspace = true
tracing.workspace = true
uniffi = { version = "0.28", features = ["cli"] }
md5 = "0.7"
ulid = "1.0"
tempfile = "3.14"
capacitor-daemon-protocol = { path = "../daemon-protocol" }

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[features]
# Enables test helper methods for integration tests
test-helpers = []

[dev-dependencies]
tempfile = "3.14"
chrono = { workspace = true }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
