[package]
name = "hud-core"
description = "Core library for Claude HUD - shared business logic for all clients"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
walkdir.workspace = true
dirs.workspace = true
once_cell.workspace = true
chrono.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3.14"
