[package]
name = "claude-hud"
description = "Claude HUD - Dashboard for Claude Code"
repository = ""
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
default-run = "claude-hud"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
# Workspace dependencies
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
walkdir.workspace = true
dirs.workspace = true
once_cell.workspace = true
chrono.workspace = true

# Local workspace crate
hud-core = { path = "../../../core/hud-core" }

# Tauri-specific dependencies
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
notify = "6.1"

# TUI dependencies (for hud-tui binary)
ratatui = "0.29.0"
crossterm = "0.29.0"
